--- a/style.css
+++ b/style.css
@@ -51,7 +51,12 @@ header {
 }
 
 .debug {
-	background-color: orange;
+	background-color: rgba(177, 215, 217, .9);
+	color: rgb(91, 41, 0);
+	margin-top: 1rem;
+}
+
+.search {
 	margin-top: 1rem;
 }
 
