--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ header {
 }
 
 .debug {
-	background-color: rgba(177, 215, 217, .9);
+	/*background-color: rgba(177, 215, 217, .9);*/
 	color: rgb(91, 41, 0);
 	margin-top: 1rem;
 }
@@ -60,34 +60,17 @@ header {
 	margin-top: 1rem;
 }
 
-/*button {
-   border-top: 1px solid #edc0c0;
-   background: #7d0707;
-   background: -webkit-gradient(linear, left top, left bottom, from(#c9adad), to(#7d0707));
-   background: -webkit-linear-gradient(top, #c9adad, #7d0707);
-   background: -moz-linear-gradient(top, #c9adad, #7d0707);
-   background: -ms-linear-gradient(top, #c9adad, #7d0707);
-   background: -o-linear-gradient(top, #c9adad, #7d0707);
-   padding: 5px 10px;
-   -webkit-border-radius: 7px;
-   -moz-border-radius: 7px;
-   border-radius: 7px;
-   -webkit-box-shadow: rgba(0,0,0,1) 0 1px 0;
-   -moz-box-shadow: rgba(0,0,0,1) 0 1px 0;
-   box-shadow: rgba(0,0,0,1) 0 1px 0;
-   text-shadow: rgba(0,0,0,.4) 0 1px 0;
-   color: white;
-   font-size: 15px;
-   font-family: Georgia, Serif;
-   text-decoration: none;
-   vertical-align: middle;
+.title {
+
 }
-button:hover {
-   border-top-color: #4a0e0e;
-   background: #4a0e0e;
-   color: #ccc;
+
+.codeContents {
+  /*border: 2px solid black;*/
+  background-color: white;
+  /*margin-bottom: 1em;*/
 }
-button:active {
-   border-top-color: #545254;
-   background: #545254;
+
+.codeName {
+  background-color: rgba(177, 215, 217, .9);
+  margin-bottom: 0px;
 }
